--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,30 @@
+@font-face {
+    font-family: 'Roboto-Regular';
+    src: url(../fonts/Roboto-Regular.ttf) format('truetype');
+  }
+  @font-face {
+    font-family: 'Roboto-Light';
+    src: url(../fonts/Roboto-Light.ttf) format('truetype');
+  }
+  @font-face {
+    font-family: 'Roboto-Thin';
+    src: url(../fonts/Roboto-Thin.ttf) format('truetype');
+  }
+  @font-face {
+    font-family: 'Roboto-Black';
+    src: url(../fonts/Roboto-Black.ttf) format('truetype');
+  }
+  
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Roboto-Regular', 'Segoe UI', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+
+
 .project-image {
     width: 100%; 
     height: 250px; 
