--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,9 +156,23 @@ body {
 
 }
 
+.card-hover-effect {
+  -webkit-transform: rotate(0) scale(1);
+  transform: rotate(0) scale(1);
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+}
+
+.card-hover-effect:hover {
+  -webkit-transform: rotate(0) scale(0.95);
+  transform: rotate(0) scale(0.95);
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+}
+
 .img-hover-effect img {
-  -webkit-filter: grayscale(0) blur(0) brightness(0.5);
-  filter: grayscale(0) blur(0) brightness(0.5);
+  -webkit-filter: grayscale(0) blur(0) brightness(0.8);
+  filter: grayscale(0) blur(0) brightness(0.8);
 
   -webkit-transform: rotate(0) scale(1);
   transform: rotate(0) scale(1);
@@ -167,8 +181,56 @@ body {
 }
 
 .img-hover-effect:hover img {
-  -webkit-filter: grayscale(50%) blur(3px);
-  -webkit-transform: rotate(15deg) scale(1.4);
-  filter: grayscale(50%) blur(3px);
-  transform: rotate(15deg) scale(1.4);
+  -webkit-filter: blur(2px) brightness(0.6);
+  filter: blur(2px) brightness(0.6);
+
+  -webkit-transform: rotate(5deg) scale(1.4) ;
+  transform: rotate(5deg) scale(1.4);
+}
+
+.hover-scale-up {
+  -webkit-transform: rotate(0) scale(1);
+  transform: rotate(0) scale(1);
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+}
+
+.hover-scale-up:hover {
+  -webkit-transform: rotate(0) scale(1.02);
+  transform: rotate(0) scale(1.02);
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+}
+
+.hover-scale-down {
+  -webkit-transform: rotate(0) scale(1);
+  transform: rotate(0) scale(1);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.hover-scale-down:hover {
+  -webkit-transform: rotate(0) scale(0.98);
+  transform: rotate(0) scale(0.98);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.gradient-background {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
