--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,37 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+:root {
+	--primary: #88D5BF;
+	--secondary: #5D6BF8;
+	--third: #e27fcb;
+}
+
+.shape {
+ 	background: linear-gradient(45deg, var(--primary) 0%, var(--secondary) 100%);
+  animation: morph 8s ease-in-out infinite;
+  border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+  height: 400px;
+  transition: all 1s ease-in-out;
+  z-index: 5;
+}
+
+@keyframes morph {
+  0% {
+			border-radius:  60% 40% 30% 70% / 60% 30% 70% 40%;
+			background: linear-gradient(45deg, var(--primary) 0%, var(--secondary) 100%);
+	} 
+	
+	50% {
+			border-radius:  30% 60% 70% 40% / 50% 60% 30% 60%;
+			background: linear-gradient(45deg, var(--third) 0%, var(--secondary) 100%);
+	}
+  
+	100% {
+		border-radius:  60% 40% 30% 70% / 60% 30% 70% 40%;
+		background: linear-gradient(45deg, var(--primary) 0%, var(--secondary) 100%);
+	} 
+}
 
 
 .project-image {
@@ -341,6 +372,7 @@ body {
   outline: 0;
 }
 
+
 .circular-menu.active .floating-btn {
   box-shadow: inset 0 0 3px hsla(0, 0%, 0%, .3);
 }
@@ -479,3 +511,21 @@ body {
 .circular-menu.circular-menu-left.active .menu-item:nth-child(5) {
   transform: translate3d(6.7em,1.1em,0);
 }
+
+.exprience-item .text-shadow {
+  transition: transform .3s ease-in-out, text-shadow 0.5s ease-in-out;
+}
+
+
+.exprience-item:hover .text-shadow {
+  text-shadow: 1px 1px 3px white;
+  transform: translateX(10px);
+  transition: transform .3s ease-in-out, text-shadow 0.5s ease-in-out;
+}
+
+
+.skill-card{
+  border: 1px dashed black; 
+}
+
+
